--- a/index.html
+++ b/index.html
@@ -229,8 +229,6 @@
 
     </section>
 
-    <script src="../build//js/app.js"></script>
-
     <section  class="entrada bg-verde" >
         <h3>Entradas</h3>
 
@@ -279,5 +277,5 @@
         </p>
     </footer>
 </body>
-
+    <script src="./js/app.js"></script>
 </html>
