--- a/index.html
+++ b/index.html
@@ -46,11 +46,11 @@
 
         <div class="imagen">
             <picture>
-                <source srcset="../build/img/1.avif" type="image/avif">
-                <source srcset="../build/img/1.webp" type="image/webp">
-                <source srcset="../build/img/1.jpg" type="image/jpg">
+                <source srcset="./img/1.avif" type="image/avif">
+                <source srcset="./img/1.webp" type="image/webp">
+                <source srcset="./img/1.jpg" type="image/jpg">
 
-                <img  loading="lazy" width="200" height="300" src="../build/img/1.jpg" alt="imagen">
+                <img  loading="lazy" width="200" height="300" src="./img/1.jpg" alt="imagen">
             </picture>
         </div>
 
@@ -79,10 +79,10 @@
             <div class="seminario ilustracion bg-lila">
                 <div class="imagen-seminario">
                     <picture>
-                        <source srcset='../build/img/2.avif' type=image/avif>
-                        <source srcset='../build/img/2.webp' type=image/webp>
-                        <source srcset='../build/img/2.jpg' type=image/jpg>
-                        <img loading='lazy' width='200' heigth='300' src='../build/img/2.jpg' alt=''>
+                        <source srcset='./build/img/2.avif' type=image/avif>
+                        <source srcset='./build/img/2.webp' type=image/webp>
+                        <source srcset='./build/img/2.jpg' type=image/jpg>
+                        <img loading='lazy' width='200' heigth='300' src='./build/img/2.jpg' alt=''>
                     </picture>
                 </div>
                 <p class="lugar">Seminario de Ilustracion Digital </p>
@@ -115,10 +115,10 @@
             <div class="seminario ilustracion bg-morado">
                 <div class="imagen-seminario">
                     <picture>
-                        <source srcset='../build/img/3.avif' type=image/avif>
-                        <source srcset='../build/img/3.webp' type=image/webp>
-                        <source srcset='../build/img/3.jpg' type=image/jpg>
-                        <img loading='lazy' width='200' heigth='300' src='../build/img/3.jpg' alt=''>
+                        <source srcset='../img/3.avif' type=image/avif>
+                        <source srcset='./img/3.webp' type=image/webp>
+                        <source srcset='./img/3.jpg' type=image/jpg>
+                        <img loading='lazy' width='200' heigth='300' src='./img/3.jpg' alt=''>
                     </picture>
                 </div>
                 <p class="lugar">Seminario de Animacion Tradicional </p>
@@ -152,10 +152,10 @@
             <div class="seminario ilustracion bg-celeste">
                 <div class="imagen-seminario">
                     <picture>
-                        <source srcset='../build/img/6.avif' type=image/avif>
-                        <source srcset='../build/img/6.webp' type=image/webp>
-                        <source srcset='../build/img/6.jpg' type=image/jpg>
-                        <img loading='lazy' width='200' heigth='300' src='../build/img/6.jpg' alt=''>
+                        <source srcset='./img/6.avif' type=image/avif>
+                        <source srcset='./img/6.webp' type=image/webp>
+                        <source srcset='./img/6.jpg' type=image/jpg>
+                        <img loading='lazy' width='200' heigth='300' src='./img/6.jpg' alt=''>
                     </picture>
                 </div>
                 <p class="lugar">Seminario de Animacion Digital 2D </p>
@@ -187,10 +187,10 @@
             <div class="seminario ilustracion bg-rosado">
                 <div class="imagen-seminario">
                     <picture>
-                        <source srcset='../build/img/3.avif' type=image/avif>
-                        <source sr076147903824778463_n.webp' type=image/webp>
-                        <source srcset='../build/img/3.jpg' type=image/jpg>
-                        <img loading='lazy' width='200' heigth='300' src='../build/img/3.jpg' alt=''>
+                        <source srcset='./img/3.avif' type=image/avif>
+                        <source srcet = './img/3.webp' type=image/webp>
+                        <source srcset='./img/3.jpg' type=image/jpg>
+                        <img loading='lazy' width='200' heigth='300' src='./img/3.jpg' alt=''>
                     </picture>
                 </div>
                 <p class="lugar">Seminario de Diseño de personaje 3D  </p>
