--- a/index.html
+++ b/index.html
@@ -79,10 +79,10 @@
             <div class="seminario ilustracion bg-lila">
                 <div class="imagen-seminario">
                     <picture>
-                        <source srcset='./build/img/2.avif' type=image/avif>
-                        <source srcset='./build/img/2.webp' type=image/webp>
-                        <source srcset='./build/img/2.jpg' type=image/jpg>
-                        <img loading='lazy' width='200' heigth='300' src='./build/img/2.jpg' alt=''>
+                        <source srcset='./img/2.avif' type=image/avif>
+                        <source srcset='./img/2.webp' type=image/webp>
+                        <source srcset='./img/2.jpg' type=image/jpg>
+                        <img loading='lazy' width='200' heigth='300' src='./img/2.jpg' alt=''>
                     </picture>
                 </div>
                 <p class="lugar">Seminario de Ilustracion Digital </p>
