--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
             <div class="seminario ilustracion bg-morado">
                 <div class="imagen-seminario">
                     <picture>
-                        <source srcset='../img/3.avif' type=image/avif>
+                        <source srcset='./img/3.avif' type=image/avif>
                         <source srcset='./img/3.webp' type=image/webp>
                         <source srcset='./img/3.jpg' type=image/jpg>
                         <img loading='lazy' width='200' heigth='300' src='./img/3.jpg' alt=''>
